# unplink

./: .editorconfig  .gitignore  .prettierrc.toml  Cargo.toml  Config.toml  README.md  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/hermes/: Cargo.toml
apps/hermes/migrations/: 0001_init.sql
apps/hermes/src/: auth.rs  cache.rs  db.rs  main.rs  router.rs  users.rs  web.rs
apps/hermes/src/web/: app.rs
apps/webui/: eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/webui/src/: App.vue  app.vue  main.ts
apps/webui/src/assets/: styles.css
apps/webui/src/components/: FeatherIcon.vue  global-nav.vue  input-button.vue  input-text.vue  theme-selector.vue
apps/webui/src/pages/: index.vue
apps/webui/src/router/: index.ts
apps/webui/src/views/: AboutView.vue  ShortenView.vue
migrations/: 0001_init.sql
src/: main.rs  users.rs
src/web/: app.rs  auth.rs
webui/: env.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml
webui/src/: app.vue  main.ts
webui/src/assets/: styles.css
webui/src/components/: feather-icon.vue  global-nav.vue  input-button.vue  input-select.vue  input-text.vue
webui/src/hooks/: useGlobalState.ts  useLinks.ts
webui/src/pages/: about.vue  debug.vue  history.vue  index.vue  settings.vue
webui/src/router/: index.ts
