[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-login = "0.17.0"
config = "0.15.11"
nanoid = "0.4.0"
password-auth = "1.0.0"
serde = "1.0.219"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
shuttle-secrets = "0.42.0"
shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.6"
thiserror = "2.0.12"
tokio = "1.45.0"
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["auth", "cors"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing-subscriber = "0.3.19"
url = "2.5.4"
